# LER2026-scouting-app

./: .gitignore  README  gradle.properties
app/src/main/: .ui.c  .ui.h  AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c  ui.c
app/src/main/cpp/h/: ui.h
